--- a/.github/workflows/master_demodeployweb2.yml
+++ b/.github/workflows/master_demodeployweb2.yml
@@ -15,5 +15,18 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
+    - name: Set up Java version
+      uses: actions/setup-java@v1
+      with:
+        java-version: '11'
+
     - name: Build with Maven
-      run: mvn package azure-webapp:deploy
+      run: mvn clean install
+
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'demodeployweb2'
+        slot-name: 'production'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_90ddbf81d3304ef5bf5586770a2709ea }}
+        package: '${{ github.workspace }}/target/*.war'
