--- a/.github/workflows/master_demodeploywebappv2.yml
+++ b/.github/workflows/master_demodeploywebappv2.yml
@@ -21,7 +21,7 @@ jobs:
         java-version: '11'
 
     - name: Build with Maven
-      run: mvn package azure-webapp:deploy
+      run: mvn clean install
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
