--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+	<finalName>ROOT</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
